# ss-api

./: Makefile  README.md  config.toml  pyproject.toml  requirements.txt  setup.bat  ss_api.py  ss_uploader.py
src/: __init__.py  ss_api.py
src/ss_api/: __init__.py  ss_api.py
